@@ -23,7 +23,7 @@
 // Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 // MA 02111-1307, USA
 
-#include <rquantlib.hpp>
+#include <rquantlib.h>
 
 RcppExport SEXP QL_AsianOption(SEXP optionParameters){
 
