@@ -21,8 +21,8 @@
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-#ifndef rquantlib_hpp
-#define rquantlib_hpp
+#ifndef rquantlib_h
+#define rquantlib_h
 
 #include <ql/quantlib.hpp>
 #include <boost/algorithm/string.hpp>
